# Copperplate

./: CMakeLists.txt
Copperplate/: CMakeLists.txt  application.cpp  application.h  core.cpp  core.h  hatching.cpp  hatching.h  hatchinglayer.cpp  hatchinglayer.h  hatchingline.cpp  hatchingline.h  image.cpp  image.h  main.cpp  mesh.cpp  mesh.h  rendering.cpp  rendering.h  scene.cpp  scene.h  shader.cpp  shader.h  statistics.cpp  statistics.h  utility.cpp  utility.h
Copperplate/shaders/: contours.frag  contours.geom  contours.vert  curvature.frag  curvature.vert  depth.frag  depth.vert  diffuse.frag  diffuse.vert  displaytex.frag  displaytexalpha.frag  displaytexalpha.vert  extractcontours.geom  flatcolor.frag  flatcolor.vert  hatching.geom  hatching.vert  hatchinglines.vert  movement.frag  movement.vert  normals.frag  normals.vert  screenpoints.vert  shadingGradient.frag  shadingGradient.vert  spherenormals.frag  spherenormals.vert  transformseeds.comp
